--- a/fms_fsdp/mup/sweeps/configs/n_layers-4/no_mup.yaml
+++ b/fms_fsdp/mup/sweeps/configs/n_layers-4/no_mup.yaml
@@ -15,7 +15,7 @@ parameters:
   vocab_size:
     value: 128256
   bos_token:
-    value: None
+    value: null
   eos_token:
     value: 128000
   use_torch_compile:
