--- a/fms_fsdp/mup/sweeps/configs/n_layers-4/mup.yaml
+++ b/fms_fsdp/mup/sweeps/configs/n_layers-4/mup.yaml
@@ -40,6 +40,11 @@ parameters:
   num_steps:
     value: 10000
   report_interval:
+    value: 100
+  mup:
+    value: true
+  mup_base_width:
+    value: 512
   # LRs: log-spaced between 1e-2 and 1e-5, inclusive. [f"{10**(-n/3):.3e}" for n in range(6, 16)]
   learning_rate:
     values: 
@@ -53,4 +58,3 @@ parameters:
       - 4.642e-05
       - 2.154e-05
       - 1.000e-05
-    value: 100
