--- a/fms_fsdp/mup/sweeps/configs/n_layers-3/3_layer.yaml
+++ b/fms_fsdp/mup/sweeps/configs/n_layers-3/3_layer.yaml
@@ -1,4 +1,4 @@
-name: 4-layer-sweep-custom-init-updated-emb-init
+name: 3-layer-sweep
 method: grid
 metric:
   goal: minimize
@@ -27,7 +27,7 @@ parameters:
   tracker:
     value: wandb
   n_layer:
-    value: 4
+    value: 3
   head_dim:
     value: 128
   d_model:
@@ -38,6 +38,8 @@ parameters:
       - 2048
       - 4096
       - 8196
+  optim:
+    value: adamw
   mup_base_d_model:
     value: 256
   seq_length:
@@ -59,14 +61,14 @@ parameters:
   # LRs: log-spaced
   learning_rate:
     values:
-      - 4.642e-02
-      - 2.154e-02
-      - 1.000e-02
-      - 4.642e-03
-      - 2.154e-03
-      - 1.000e-03
-      - 4.642e-04
-      - 2.154e-04
-      - 1.000e-04
-      - 4.642e-05
-      - 2.154e-05
+    - 0.01
+    - 0.00630957344480193
+    - 0.003981071705534973
+    - 0.0025118864315095794
+    - 0.001584893192461114
+    - 0.001
+    - 0.000630957344480193
+    - 0.00039810717055349735
+    - 0.00025118864315095795
+    - 0.00015848931924611142
+    - 0.0001
