--- a/fms_fsdp/mup/sweeps/configs/n_layers-4/4_layer_no_mup_fsdp.yaml
+++ b/fms_fsdp/mup/sweeps/configs/n_layers-4/4_layer_no_mup_fsdp.yaml
@@ -1,4 +1,4 @@
-name: 4-layer-sweep-mup-s
+name: 4-layer-sweep-no-mup
 method: grid
 metric:
   goal: minimize
@@ -55,15 +55,7 @@ parameters:
   report_interval:
     value: 64
   mup:
-    value: true
-  mup_simple_scaling_impl:
     value: false
-  mup_s:
-    values:
-      -  0.0
-      -  0.333333
-      -  0.666666
-      -  1.0
   # LRs: log-spaced
   learning_rate:
     values:
